Fix delete align

--- a/src/ui/IconButton/index.scss
+++ b/src/ui/IconButton/index.scss
@@ -7,6 +7,7 @@
 	border: 0;
 	background-color: transparent;
 	line-height: 0;
+	vertical-align: middle;
 
 	&:hover,
 	&:active {
